Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente consectetur ex quasi consequuntur nemo? Neque, magni sunt quae repellat harum error at, totam magnam perferendis placeat enim possimus reprehenderit voluptatum.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis, non. Quisquam itaque expedita blanditiis dolorem, ad incidunt placeat quo laboriosam dolorum officiis voluptatibus, voluptate debitis nemo laborum accusantium, tempora eveniet.</p>
 </body>
 </html>
